# satysfi-algorithm

./: .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  Satyristes  satysfi-algorithm-doc.opam  satysfi-algorithm.opam
.github/workflows/: ci.yml
doc/: manual.saty
src/: algorithm.satyh  core.satyh  utils.satyh
src/style/: c.satyh  default.satyh  python.satyh
